--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@
             width: 100%;
             height: 600px;
             /* ارتفاع الهيدر */
-            background: url('../images/cover2.jpg') no-repeat center center;
+            background: url('./myProject/images/cover2.jpg') no-repeat center center;
             background-size: cover;
             position: relative;
             display: flex;
